index.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

html, 
body {
    margin: 0;
    padding: 0;
    font-family: "Roboto", sans-serif;
    min-height: 100%;
}

body {
    display: flex;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
}

/* Typography */

h1 {
    font-size: 1.5rem;
    text-transform: capitalize;
    margin: 0;
    padding: 0.333em 0;
}

h2 {
    font-size: 1.5rem;
}

p {
    font-size: 1rem;
    line-height: 1.5;
    margin: 0;
}

a {
    color: #000000;
}

time {
    font-size: 0.875rem;
}

/* Flex Containers */

section.hero,
section.blog {
    display: flex;
    padding: 1.25em;
}

/* Nav */ 

nav,
nav .container,
nav ul {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 0.188em;
}

nav {
    font-size: 0.75rem;
    font-weight: bold;
    padding: 0 1.25em;
}

nav ul {
    list-style-type: none;
    gap: 2.5em;
}

nav li {
    text-transform: uppercase;
}

nav img {
    width: 1.438em;
    height: 1.438em;
}

nav a {
    text-decoration: none;
}

/* Hero */

.hero {
    flex-direction: column;
    justify-content: end;
    padding-top: 5.438em;
    color: white;
    min-height: 293px;
    background-color: #888;
    background-blend-mode: multiply;
    background-image: url("/images/article-image-hero.jpg");
    background-size: cover;
    background-position: center;
}

.hero > time {
    font-size: 0.75rem;
    margin-bottom: 0.5em;
}

/* Blogs */

section.blog {
    flex-wrap: wrap;
    gap: 1em;
    padding: 1em;
}

section.blog > article {
    flex-grow: 1;
    flex-basis: 300px;
}

.blog-text {
    display: flex;
    flex-direction: column;
    gap: 0.563em;
}

div.blog-text > time {
    display: block;
    text-transform: uppercase;
    margin-top: 1.2em;
}

main > div.view-more-section {
    font-weight: 700;
    color: #000000;
    margin-top: 1em;
    margin-bottom: 2.688em;
    text-align: center;
}

div.blog-container > img {
    width: 100%;
}

/* Footer */

footer {
    flex-shrink: 0;
    width: 100%;
}

footer > h2,
footer > p {
    font-size: 0.75rem;
}

footer > p {
    color: #D7D7D7;
}

footer {
    color: #ECECEC;
    padding: 2.313em 0;
    text-align: center;
    background-color: #202020;
}

/* Utility */

.m0 {
    margin: 0;
}

/* Media Queries */

@media (min-width: 620px) {
    section.hero,
    section.blog {
        padding: 1.75em;
    }

    section.hero {
        background-image: url("/images/article-image-hero-large.jpg");
        min-height: 391px;
    }
}

@media (min-width: 850px) {

    main {
        max-width: 1080px;
        margin: 0 auto;
    }

    section.hero,
    section.blog {
        padding: 2.75em;
    }

    section.blog {
        gap: 1.75em;
    }

    section.hero {
        min-height: 488px;
    }
}

